--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           cmake -B build -DCMAKE_BUILD_TYPE=RelWithDebInfo
           cd build
-          make -j3
+          make -j3 VERBOSE=1
           make install
       - name: Run
         run: tests/run.sh
