add isa-l to build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,20 @@ FetchContent_Declare(ZStrGitRepo
 )
 FetchContent_MakeAvailable(ZStrGitRepo)
 
+### add isal
+include(ExternalProject)
+ExternalProject_Add(
+  ISAL
+  GIT_REPOSITORY https://github.com/intel/isa-l
+  PREFIX ${CMAKE_CURRENT_BINARY_DIR}/ISAL
+  BUILD_IN_SOURCE 1
+  CONFIGURE_COMMAND ""
+  BUILD_COMMAND make -f Makefile.unx
+  INSTALL_COMMAND ""
+)
+set(ISAL_INCLUDE_DIR "${CMAKE_CURRENT_BINARY_DIR}/ISAL/src/ISAL/include")
+set(ISAL_LIB "${CMAKE_CURRENT_BINARY_DIR}/ISAL/src/ISAL/bin/isa-l.a")
+
 # Obtain version from Git or fall back to PROJECT_VERSION if not building
 # from a Git repository
 add_custom_target(version
@@ -67,8 +81,9 @@ add_library(salib STATIC ${SOURCES}
   ext/ssw/ssw_cpp.cpp
   ext/ssw/ssw.c
 )
-target_include_directories(salib PUBLIC src/ ext/ ${PROJECT_BINARY_DIR})
-target_link_libraries(salib PUBLIC ZLIB::ZLIB Threads::Threads zstr::zstr)
+target_include_directories(salib PUBLIC src/ ext/ ${PROJECT_BINARY_DIR} ${ISAL_INCLUDE_DIR})
+target_link_libraries(salib PUBLIC ZLIB::ZLIB Threads::Threads zstr::zstr ${ISAL_LIB})
+add_dependencies(salib ISAL)
 IF(ENABLE_AVX)
   target_compile_options(salib PUBLIC "-mavx2")
 ENDIF()
