--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Check for tab characters
         run: "! grep -P -R '\\t' src/ tests/*.{cpp,py}"
+      - name: Run clang-format style check
+        uses: jidicula/clang-format-action@v4.11.0
+        with:
+          clang-format-version: "16"
+          check-path: "src/"
 
   build:
     if: >-
