We can build an index

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.1.4", features = ["derive"] }
 fxhash = "0.2.1"
+pdqsort = "1.0.3"
+rayon = "1.7.0"
 xxhash-rust = { version = "0.8.5", features = ["xxh64"] }
 
 [profile.release]
