--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ cc = "1.0"
 
 [dependencies]
 clap = { version = "4.1.4", features = ["derive"] }
+fastrand = { version = "2.0.1", default-features = false }
 fxhash = "0.2.1"
 log = "0.4.20"
+memchr = "2.7.1"
 rayon = "1.7.0"
 sigpipe = "0.1.3"
 xxhash-rust = { version = "0.8.5", features = ["xxh64"] }
