--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-2022]
     steps:
       - uses: actions/checkout@v4
       - name: Install Linux dependencies
@@ -34,6 +34,9 @@ jobs:
       - name: Install macOS dependencies
         if: runner.os == 'macOS'
         run: brew install isa-l
+      - name: Install Windows dependencies
+        if: runner.os == 'Windows'
+        run: echo hello
       - name: Build
         run: |
           cmake -B build -DCMAKE_BUILD_TYPE=RelWithDebInfo
