--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         run: brew install isa-l
       - name: Install Windows dependencies
         if: runner.os == 'Windows'
-        run: choco install pkgconfiglite
+        run: choco install pkgconfiglite zlib
       - name: Build
         run: |
           cmake -B build -DCMAKE_BUILD_TYPE=RelWithDebInfo
