Move find_hits and Hit struct into separate file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ add_library(salib STATIC ${SOURCES}
   src/aln.cpp
   src/cigar.cpp
   src/aligner.cpp
+  src/hits.cpp
   src/nam.cpp
   src/randstrobes.cpp
   src/readlen.cpp
