--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Check formatting
+      run: cargo fmt --check
     - name: Build
       run: cargo build --verbose
     - name: Run tests
