--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ flate2 = { version = "1.0", features = ["zlib-rs"]}
 thiserror = "2.0.11"
 rayon = "1.11.0"
 mimalloc = "0.1.48"
+block-aligner = { version = "0.5", features = ["simd_avx2"] }
 
 [dev-dependencies]
 assert_cmd = "2.0.16"
