--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,9 @@ assert_cmd = "2.0.16"
 predicates = "3.1.3"
 temp-file = "0.1.9"
 
+[profile.dev]
+opt-level = 1
+
 [profile.release]
 codegen-units = 1
 lto = true
