--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["python"]
 
 [package]
 name = "strobealign"
-version = "0.1.0"
+version = "0.18.0-alpha"
 edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
