--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -7,17 +7,6 @@ defaults:
     shell: bash  # For -o pipefail
 
 jobs:
-  lint:
-    # Run for PRs only if they come from a forked repo (avoids duplicate runs)
-    if: >-
-      github.event_name != 'pull_request' ||
-      github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Check for tab characters
-        run: "! grep -P -R '\\t' src/ tests/*.{cpp,py}"
-
   build:
     if: >-
       github.event_name != 'pull_request' ||
@@ -39,33 +28,8 @@ jobs:
           cmake -B build -DCMAKE_BUILD_TYPE=RelWithDebInfo
           cmake --build build -j 3
           cmake --install build
-      - name: Install Linux dependencies
-        if: runner.os == 'Linux'
-        run: sudo apt-get install samtools
-      - name: Install macOS dependencies
-        if: runner.os == 'macOS'
-        run: brew install samtools
       - name: Run
-        run: tests/run.sh
-
-  # Test building with a downloaded ISA-L
-  externalisal:
-    if: >-
-      github.event_name != 'pull_request' ||
-      github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install Linux dependencies
-        if: runner.os == 'Linux'
-        run: sudo apt-get install nasm
-      - name: Install macOS dependencies
-        if: runner.os == 'macOS'
-        run: brew install nasm
-      - uses: actions/checkout@v4
-      - name: Build
-        run: |
-          cmake -B build -DISAL=download
-          cmake --build build -j3
+        run: build/test-strobealign --no-intro
 
   pythonbindings:
     if: >-
